--- a/index.html
+++ b/index.html
@@ -4,30 +4,29 @@
     <meta charset="UTF-8">
     <title>Mushima-Shikongo Grain | Smart Agriculture Monitoring</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 </head>
 <body>
 
 <main class="dashboard">
 
-    <!-- HEADER -->
     <header class="topbar">
         <div>
             <h1>Mushima-Shikongo Grain</h1>
             <p class="subtitle">Smart Agriculture Monitoring Platform</p>
         </div>
-
         <div id="status" class="status stable">
             SYSTEM: STABLE
         </div>
     </header>
 
-    <!-- HEALTH SECTION -->
     <section class="health-card">
         <h3>Crop Health Score</h3>
 
         <div class="health-number">
-            <span id="health" aria-live="polite">--</span>
+            <span id="health">--</span>
             <small>/100</small>
         </div>
 
@@ -36,44 +35,29 @@
         </div>
     </section>
 
-    <!-- METRICS -->
     <section class="metrics-grid">
+        <div class="metric"><label>Temperature</label><div id="temp" class="value">--</div></div>
+        <div class="metric"><label>Humidity</label><div id="humidity" class="value">--</div></div>
+        <div class="metric"><label>Soil Moisture</label><div id="soil" class="value">--</div></div>
+        <div class="metric"><label>Rainfall</label><div id="rain" class="value">--</div></div>
+        <div class="metric"><label>Light Level</label><div id="light" class="value">--</div></div>
+        <div class="metric"><label>Irrigation Decision</label><div id="irrigation" class="value">--</div></div>
+    </section>
 
-        <div class="metric">
-            <label>Temperature</label>
-            <div id="temp" class="value">--</div>
+    <section class="charts-section">
+        <div class="chart-card">
+            <h3>Temperature Trend</h3>
+            <canvas id="tempChart"></canvas>
         </div>
 
-        <div class="metric">
-            <label>Humidity</label>
-            <div id="humidity" class="value">--</div>
+        <div class="chart-card">
+            <h3>Soil Moisture Trend</h3>
+            <canvas id="soilChart"></canvas>
         </div>
-
-        <div class="metric">
-            <label>Soil Moisture</label>
-            <div id="soil" class="value">--</div>
-        </div>
-
-        <div class="metric">
-            <label>Rainfall</label>
-            <div id="rain" class="value">--</div>
-        </div>
-
-        <div class="metric">
-            <label>Light Level</label>
-            <div id="light" class="value">--</div>
-        </div>
-
-        <div class="metric">
-            <label>Irrigation Decision</label>
-            <div id="irrigation" class="value">--</div>
-        </div>
-
     </section>
 
 </main>
 
-<!-- Toast Notifications -->
 <div id="toastContainer" class="toast-container"></div>
 
 <script src="script.js"></script>
