UI refinement and improved spacing

--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <title>Mushima-Shikongo Grain | Smart Agriculture Monitoring</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="style.css">
+    <!-- Chart.js MUST load before script.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <main class="dashboard">
 
+    <!-- HEADER -->
     <header class="topbar">
         <div>
             <h1>Mushima-Shikongo Grain</h1>
@@ -22,40 +25,71 @@
         </div>
     </header>
 
+    <!-- HEALTH -->
     <section class="health-card">
         <h3>Crop Health Score</h3>
+
         <div class="health-number">
             <span id="health">--</span>
             <small>/100</small>
         </div>
+
         <div class="health-bar">
             <div id="healthFill"></div>
         </div>
     </section>
 
+    <!-- METRICS -->
     <section class="metrics-grid">
-        <div class="metric"><label>Temperature</label><div id="temp" class="value">--</div></div>
-        <div class="metric"><label>Humidity</label><div id="humidity" class="value">--</div></div>
-        <div class="metric"><label>Soil Moisture</label><div id="soil" class="value">--</div></div>
-        <div class="metric"><label>Rainfall</label><div id="rain" class="value">--</div></div>
-        <div class="metric"><label>Light Level</label><div id="light" class="value">--</div></div>
-        <div class="metric"><label>Irrigation Decision</label><div id="irrigation" class="value">--</div></div>
+
+        <div class="metric">
+            <label>Temperature</label>
+            <div id="temp" class="value">--</div>
+        </div>
+
+        <div class="metric">
+            <label>Humidity</label>
+            <div id="humidity" class="value">--</div>
+        </div>
+
+        <div class="metric">
+            <label>Soil Moisture</label>
+            <div id="soil" class="value">--</div>
+        </div>
+
+        <div class="metric">
+            <label>Rainfall</label>
+            <div id="rain" class="value">--</div>
+        </div>
+
+        <div class="metric">
+            <label>Light Level</label>
+            <div id="light" class="value">--</div>
+        </div>
+
+        <div class="metric">
+            <label>Irrigation</label>
+            <div id="irrigation" class="value">--</div>
+        </div>
+
     </section>
 
+    <!-- CHARTS -->
     <section class="charts-section">
+
         <div class="chart-card">
             <h3>Temperature Trend</h3>
             <canvas id="tempChart"></canvas>
         </div>
+
         <div class="chart-card">
             <h3>Soil Moisture Trend</h3>
             <canvas id="soilChart"></canvas>
         </div>
+
     </section>
 
 </main>
-
-<div id="toastContainer" class="toast-container"></div>
 
 <script src="script.js"></script>
 </body>
