UI refinement and improved spacing

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </section>
 
 </main>
-
+<div id="toastContainer" class="toast-container"></div>
 <script src="script.js?v=2"></script>
 </body>
 </html>
